--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "leaflet": "^1.7.1",
+    "leaflet-control-geocoder": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -36,7 +37,7 @@
     ">0.2%",
     "not dead",
     "not op_mini all"
-    ],
+  ],
   "devDependencies": {
     "@types/leaflet": "^1.7.5"
   }
