--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,14 +10,16 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "axios": "^0.24.0",
     "leaflet": "^1.7.1",
     "leaflet-control-geocoder": "^2.3.0",
     "react": "^17.0.2",
+    "react-app": "^1.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-leaflet": "^3.2.2",
     "react-scripts": "4.0.3",
+    "react-st-modal": "^1.1.3",
+    "recharts": "^2.1.8",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -39,6 +41,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@types/leaflet": "^1.7.5"
+    "@types/leaflet": "^1.7.5",
+    "@types/react-router-dom": "^5.3.2"
   }
 }
